[package]
name = "rust-pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
chrono = "0.4.31"
color-eyre = "0.6.2"
crossterm = "0.27.0"
log = "0.4.20"
log4rs = "1.2.0"
ratatui = "0.25.0"
